Modified the contract with improvements,mvp of Oracle ready also made front end with aptos wallet intigration

--- a/Oracle/.env
+++ b/Oracle/.env
@@ -1,2 +1,12 @@
+PORT=3000
 CHAIN_DATA = [{'chain':'peaq','chainID':'2','rpcUrl':'','lastProccessedBlock':''},{'chain':'aptos', 'chainID':'3', 'rpcUrl':'', 'lastProccessedBlock':''}]
-REDIS_URL =''
+REDIS_URL = ''
+REDIS_URL_BULL = ''
+PEAQ_CONTRACT_ADDRESS = ''
+APTOS_CONTRACT_ADDRESS = ''
+APTOS_PUBLIC_KEY = ''
+MAX_GAS_APTOS =''
+DEFAULT_GAS_APTOS= ''
+Listener_Refersh_Interval = '*/100 * * * * *'
+APTOS_DEV_NET_URL = 'https://fullnode.devnet.aptoslabs.com'
+PEAQ_RPC_URL = '' 
