--- a/Oracle/package.json
+++ b/Oracle/package.json
@@ -10,6 +10,11 @@
       "typeorm": "typeorm-ts-node-commonjs"
    },
    "dependencies": {
+      "@types/amqplib": "^0.8.2",
+      "@types/web3": "^1.2.2",
+      "amqplib": "^0.10.3",
+      "aptos": "^1.3.15",
+      "axios": "^1.1.2",
       "bullmq": "^2.1.3",
       "dotenv": "^16.0.3",
       "express": "^4.18.1",
@@ -17,7 +22,8 @@
       "redis": "^4.3.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.10",
-      "typescript": "^4.8.4"
+      "typescript": "^4.8.4",
+      "web3": "^1.8.0"
    },
    "devDependencies": {
       "@types/express": "^4.17.14",
