(In progress)Made improvements to both contracts and Testing Oracle and improving Oracle

--- a/Oracle/tsconfig.json
+++ b/Oracle/tsconfig.json
@@ -8,6 +8,7 @@
       "module": "commonjs",
       "moduleResolution": "node",
       "outDir": "./build",
+      "resolveJsonModule":true,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "esModuleInterop": true,
