--- a/Oracle/package.json
+++ b/Oracle/package.json
@@ -16,11 +16,14 @@
       "aptos": "^1.3.15",
       "axios": "^1.1.2",
       "bullmq": "^2.1.3",
+      "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.1",
+      "js-sha3": "^0.8.0",
       "pg": "^8.4.0",
       "redis": "^4.3.1",
       "reflect-metadata": "^0.1.13",
+      "tweetnacl": "^1.0.3",
       "typeorm": "0.3.10",
       "typescript": "^4.8.4",
       "web3": "^1.8.0"
