--- a/Oracle/package.json
+++ b/Oracle/package.json
@@ -4,26 +4,24 @@
    "main": "server.js",
    "license": "MIT",
    "scripts": {
-      "build": "npx tsc",
-      "start": "ts-node ./src/index.ts",
-      "dev": "concurrently \"npx tsc --watch\" \"nodemon -q ./build/server.js\"",
+      "start": "rm -rf build/ && tsc && node build/index.js",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "dev": "nodemon src/index.ts",
+      "build": "rm -rf build/ && tsc",
       "typeorm": "typeorm-ts-node-commonjs"
    },
    "dependencies": {
-      "@types/amqplib": "^0.8.2",
-      "@types/web3": "^1.2.2",
-      "amqplib": "^0.10.3",
       "aptos": "^1.3.15",
       "axios": "^1.1.2",
+      "bignumber.js": "^9.1.0",
       "bullmq": "^2.1.3",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.18.1",
-      "js-sha3": "^0.8.0",
       "pg": "^8.4.0",
+      "rate-limiter-flexible": "^2.4.0",
       "redis": "^4.3.1",
       "reflect-metadata": "^0.1.13",
-      "tweetnacl": "^1.0.3",
       "typeorm": "0.3.10",
       "typescript": "^4.8.4",
       "web3": "^1.8.0"
@@ -31,6 +29,7 @@
    "devDependencies": {
       "@types/express": "^4.17.14",
       "@types/node": "^16.11.10",
+      "@types/web3": "^1.2.2",
       "concurrently": "^7.4.0",
       "nodemon": "^2.0.20",
       "ts-node": "10.7.0"
