--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.6",
     "aptos": "^1.3.15",
     "axios": "^1.1.2",
+    "bignumber.js": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
